feat: inicio da criação da tela de login e estilos

--- a/src/assets/scss/Main.scss
+++ b/src/assets/scss/Main.scss
@@ -3,3 +3,6 @@
 @import "./config/dark-mode";
 @import "./config/global";
 @import "./config/light-mode";
+
+//custom pages
+@import "./custom/pages/login"
