--- a/src/assets/scss/config/_variables.scss
+++ b/src/assets/scss/config/_variables.scss
@@ -43,6 +43,8 @@ $blue-700: #1C4B78;
 $blue-800: #1C4B78;
 $blue-900: #163B5E;
 
+$bg-login: $blue-300;
+
 $primary:       $red;
 $secondary:     $gray-700;
 $success:       $green;
