refactor:  ajustando configuração do sass bootstrap

--- a/src/assets/scss/Main.scss
+++ b/src/assets/scss/Main.scss
@@ -1,3 +1,8 @@
+//core
+@import "./node_modules/bootstrap/scss/functions";
+@import "./node_modules/bootstrap/scss/variables";
+@import "./node_modules/bootstrap/scss/bootstrap";
+
 //config
 @import "./config/variables";
 @import "./config/dark-mode";
