fix: corrigindo cor do background principal

--- a/src/assets/scss/custom/pages/_login.scss
+++ b/src/assets/scss/custom/pages/_login.scss
@@ -1,9 +1,13 @@
-body{
+.bg-login{
   background: rgb(22,35,135);
   background: linear-gradient(133deg, rgba(22,35,135,1) 0%, rgba(40,108,172,1) 64%) no-repeat;
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
 }
 
 .content-login{
