--- a/src/assets/scss/config/_variables.scss
+++ b/src/assets/scss/config/_variables.scss
@@ -14,3 +14,5 @@ $gap-5: 5px;
 $gap-10: 10px;
 $gap-15: 15px;
 $gap-20: 20px;
+
+$blue-gradient: rgb(22,35,135) linear-gradient(133deg, rgba(22,35,135,1) 0%, rgba(40,108,172,1) 64%);
