feat: criação do componente de breadcrumbs

--- a/src/assets/scss/Main.scss
+++ b/src/assets/scss/Main.scss
@@ -12,6 +12,7 @@
 //components
 @import "./custom/components/navbar";
 @import "./custom/components/sidebar";
+@import "./custom/components/breadcrumbs";
 
 //custom pages
 @import "./custom/pages/login";
