--- a/src/assets/scss/custom/components/_sidebar.scss
+++ b/src/assets/scss/custom/components/_sidebar.scss
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap');
 :root {
   --nav-width: 68px;
   --first-color: #4723d9;
@@ -74,7 +73,10 @@ a {
   left: 0;
 }
 .main-content {
-  padding-left: 0;
+  padding-left: calc(0px + 20px);
+  padding-right: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 .active {
   color: var(--white-color);
@@ -99,9 +101,9 @@ a {
     width: calc(var(--nav-width) + 156px);
   }
   .main-content.open {
-    padding-left: 156px;
+    padding-left: calc(156px + 20px);
   }
   .main-content:not(.open) {
-    padding-left: 0;
+    padding-left: calc(0px + 20px);
   }
 }
