feat: adicionando componente de NoData para a tebela

--- a/src/assets/scss/Main.scss
+++ b/src/assets/scss/Main.scss
@@ -13,6 +13,7 @@
 @import "./custom/components/navbar";
 @import "./custom/components/sidebar";
 @import "./custom/components/breadcrumbs";
+@import "./custom/components/customTable";
 
 //custom pages
 @import "./custom/pages/login";
