feat: adicionando página de server-error

--- a/src/assets/scss/Main.scss
+++ b/src/assets/scss/Main.scss
@@ -19,3 +19,4 @@
 @import "./custom/pages/login";
 @import "./custom/pages/customers";
 @import "./custom/pages/notFound";
+@import "./custom/pages/serverError";
