refactor: adicionando estado global do modal e estilo para o botão padrão

--- a/src/assets/scss/config/_global.scss
+++ b/src/assets/scss/config/_global.scss
@@ -52,3 +52,12 @@ body[theme='dark'] {
   align-items: center;
   height: 100%;
 }
+
+.btn-default {
+  background-color: $blue-300;
+
+  &:hover,
+  &:focus{
+    background-color: $blue-400;
+  }
+}
